--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<title
+<title>AlbyTech</title>
 <link rel="stylesheet" href="style.css">
 <html>
     <h1>AlbyTech</h1>
     <img src="image_1.jpg">
     <h1>The future of technology</h1>
-    <img src="image_3.jpg">
-</html>    
+    <img src="image_4.jpg">
+    <a href="2nd.html">
+        <button class="button button1">Click T Go to the next page</button>
+    </a>
+</html>      
