--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>AlbyTech</title>
+<title>ZeroToHero</title>
 <link rel="stylesheet" href="style.css">
 <html>
     <h1>AlbyTech</h1>
