--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>ZeroToHero</title>
 <link rel="stylesheet" href="style.css">
 <html>
-    <h1>AlbyTech</h1>
+    <h1>ZeroToHero</h1>
     <img src="image_1.jpg">
     <h1>The future of technology</h1>
     <img src="image_4.jpg">
