--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<title>AlbyTech</title>
+<title>ZerpToHero</title>
 <link rel="stylesheet" href="style.css">
 <html>
-    <h1>AlbyTech</h1>
+    <h1>ZeroToHero</h1>
     <img src="image_1.jpg">
     <h1>The future of technology</h1>
     <img src="image_5.jpg">
