--- a/2nd.html
+++ b/2nd.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<title>About</title>
 <link rel="stylesheet" href="mystyle.css"
 <html>
     <h1>About</h1>
     <p>This company is focused on education and the future world<br>And the best way to create that is to create the next generation.<br>
-    and me AlbyShahab The owner of this company is no famous person either and  i am not even an adult..<br>but i want 12 year old kids like me to create better future for our selves</p>
+    and me Alby Shahab The owner of this company is no famous person either and  i am not even an adult..<br>but I want 12 year old kids like me to create better future for our selves</p>
 </html>
+
+<a href="signup.html">
+    <button class="button button1">Click To Sign Up</button>
+</a>
